# rust

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.api  build.rs  config.json  docker-compose.yml
data/: reviews.index  reviews.jsonl
src/: main.rs
src/api/: handlers.rs  mod.rs  models.rs
src/api/review/: handlers.rs  mod.rs  routes.rs
src/api/search/: handlers.rs  mod.rs  routes.rs
src/storage/: mod.rs  spfresh.rs
