[package]
name = "vector-search-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config parsing
toml = "0.7"

# Embedding
fastembed = "4.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File I/O
memmap2 = "0.9"

# Archive support for single-file index storage
tar = "0.4"
flate2 = "1.0"

[build-dependencies]
cc = "1.0"
